# BillingSystem

./: BS.psess  BS.sln
BS/: BS.cpp  BS.vcxproj  BS.vcxproj.filters  CMakeLists.txt  CNDef.h  DataBusiness.cpp  DataBusiness.h  DataOperate.cpp  DataOperate.h  DataTransfer.cpp  DataTransfer.h  IniOper.cpp  IniOper.h  MsgStructInfo.h  PGDatabase.cpp  PGDatabase.h  PGRecordset.cpp  PGRecordset.h  PareData.cpp  PareData.h  ReadMe.txt  debuginfo.cpp  main.cpp  stdafx.cpp  tools.cpp  tools.h
BS/Debug/: BS.pch  vc120.idb
BS/Debug/BS.tlog/: BS.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
BS/bulid/: CMakeCache.txt  Makefile  bs  cmake_install.cmake  dev.lua  ini.lua  readDevConf.lua  test.lua  writeDevConf.lua
BS/proto/: bcTx.pb.cc  bcTx.pb.h  bcTx.proto  smsTx.pb.cc  smsTx.pb.h  smsTx.proto
ipch/bs-1de9bb8a/: bs-2acf5f21.ipch
ipch/bs-763c6efb/: bs-2acf5f21.ipch
